--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# MONGODB (MongoProperties)
+#spring.data.mongodb.authentication-database=demo
 spring.data.mongodb.database=demo
+#spring.data.mongodb.field-naming-strategy= # Fully qualified name of the FieldNamingStrategy to use.
+#spring.data.mongodb.grid-fs-database= # GridFS database name.
+spring.data.mongodb.host=127.0.0.1
+#spring.data.mongodb.password=
+ # Login password of the mongo server. Cannot be set with uri.
+spring.data.mongodb.port=27017
+#spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.uri=mongodb://127.0.0.1/demo
+   # Mongo database URI. Cannot be set with host, port and credentials.
+#spring.data.mongodb.username= # Login user of the mongo server. Cannot be set with uri.
