--- a/build.gradle
+++ b/build.gradle
@@ -19,15 +19,14 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.9
-targetCompatibility = 1.9
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
 }
-
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
@@ -38,6 +37,7 @@ dependencies {
 //    compile('org.springframework.security:spring-security-webflux')
     compile('org.apache.commons:commons-lang3:3.7')
     runtimeClasspath('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
 }
